<resources>
    <string name="app_name">Protsahan</string>
    <string name="read_file">This app needs access to your file storage so that it can read video.</string>
    <string name="image">Image</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_image">Upload Image</string>
    <string name="video">Video</string>
    <string name="upload_document">Upload Document</string>
    <string name="document">Document</string>
    <string name="ConnectionError">Connection Error! Please check your connection and try again</string>
    <string name="PermissionDenied">These permissions are required to perform the function</string>
    <string name="edit">Edit</string>
    <string name="Language">Language</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="chat">Chat</string>
    <string name="latest_news_data">Latest News</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="success">Success!!</string>
    <string name="failed">Failure! Try again.</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="account_signup">Account Register</string>
    <string name="description">Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_images">My Images</string>
    <string name="my_videos">My Videos</string>
    <string name="name">Name</string>
    <string name="tribe">Tribe</string>
    <string name="address">Address</string>
    <string name="aadhar">Aadhar</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="capture_video">CAPTURE VIDEO</string>
    <string name="capture_image">CAPTURE IMAGE</string>
    <string name="select_document">SELECT DOCUMENT</string>
    <string name="give_a_name_to_your_document_related_to_the_content">Give a name to your document related to the content</string>
    <string name="give_a_name_to_your_video_related_to_the_content">Give a name to your video related to the content</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scheme">Schemes</string>
    <string name="title_profiles">Profiles</string>
    <string name="title_account">Account</string>
    <string name="title_upload">Upload</string>


    <!--Garland App-->
    <string name="title_activity_details">DetailsActivity</string>
    <string name="answer">ANSWER</string>
    <string name="answer_low">answer</string>
    <string name="connect">CONNECT</string>
    <string name="years">years</string>
    <string name="asked">asked</string>
    <string name="profile">"'s Profile"</string>

    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_background" translatable="false">background</string>
    <string name="transition_list" translatable="false">list</string>

    <string name="details_connect">CONNECT</string>
    <string name="details_close">CLOSE</string>
    <string name="details_details">DETAILS</string>
    <string name="more_info">More Info</string>
    <string name="capture_video_intruction">Please Capture a video to upload!</string>
    <string name="video_title_instruction">Enter a Video Name relating to the content of video</string>
    <string name="image_capture_instruction">Please Capture a image to upload!</string>
    <string name="image_title_instruction">Enter a image name relating to the content of image</string>
    <string name="download_pdf">DOWNLOAD PDF</string>
    <string name="view_pdf">View PDF</string>
    <string name="activity_view_profiles">View All</string>
    <string name="my_profile">My Profile</string>
    <string name="upload">Upload</string>
    <string name="query">Query</string>
    <string name="error_when_no_question">Please enter a question! then press submit button</string>
    <string name="logout">Logout</string>
    <string name="education">Education</string>
    <string name="state">State</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
</resources>
