<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_scheme"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_scheme" />
    <item
        android:id="@+id/navigation_profiles"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_profiles" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:title="@string/title_upload" />

</menu>
