<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/query"
        android:title="@string/query"
        app:showAsAction="never" />

    <item
        android:id="@+id/Language"
        android:enabled="true"
        android:title="@string/Language"
        android:titleCondensed="Areas"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/english"
                android:title="@string/English"
                app:showAsAction="never" />
            <item
                android:id="@+id/hindi"
                android:title="@string/Hindi"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/chat"
        android:title="@string/chat"
        app:showAsAction="never" />


</menu>